--- a/buildbot/Makefile
+++ b/buildbot/Makefile
@@ -21,14 +21,18 @@ lint:
 	@openssl verify -CAfile ${CERTS_DIR}/ca.crt ${CERTS_DIR}/client.crt
 	@openssl verify -CAfile ${CERTS_DIR}/ca.crt ${CERTS_DIR}/server.crt
 
-test: test_normal test_security
+test: setup_tox test_normal test_security
 
 test_normal:
 	@echo "Testing Riak Python Client (without security)"
 	@../setup.py disable_security --riak-admin=${RIAK_ADMIN}
-	@RUN_YZ=1 SKIP_DATATYPES=0 SKIP_INDEXES=0 ../setup.py test
+	@(cd ..; RUN_YZ=1 SKIP_DATATYPES=0 SKIP_INDEXES=0 tox)
 
 test_security:
 	@echo "Testing Riak Python Client (with security)"
 	@../setup.py enable_security --riak-admin=${RIAK_ADMIN}
-	(cd ..; RUN_YZ=1 SKIP_INDEXES=0 RUN_SECURITY=1 SKIP_POOL=1 SKIP_RESOLVE=1 RIAK_TEST_HTTP_PORT=18098 ./setup.py test)
+	(cd ..; RUN_YZ=1 SKIP_INDEXES=0 RUN_SECURITY=1 SKIP_POOL=1 SKIP_RESOLVE=1 RIAK_TEST_HTTP_PORT=18098 tox)
+
+setup_tox:
+	@echo "Installing Tox"
+	pip install tox
